--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "gatsby-remark-textmate-highlight",
+  "name": "gatsby-remark-vscode",
   "version": "1.0.0",
-  "description": "Gatsby plugin to provide editor-quality syntax highlighting for code snippets",
-  "main": "dist/index.js",
+  "description": "Gatsby plugin to provide VS Code language support and themes to code snippets",
+  "main": "index.js",
   "scripts": {
     "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/andrewbranch/gatsby-remark-textmate-highlight.git"
+    "url": "git+https://github.com/andrewbranch/gatsby-remark-vscode.git"
   },
   "keywords": [
     "gatsby",
@@ -26,7 +26,12 @@
   "homepage": "https://github.com/andrewbranch/gatsby-remark-textmate-highlight#readme",
   "devDependencies": {
     "jest": "^24.5.0",
-    "ts-jest": "^24.0.0",
     "typescript": "^3.3.4000"
+  },
+  "dependencies": {
+    "comment-json": "^1.1.3",
+    "oniguruma": "^7.0.2",
+    "plist": "^3.0.1",
+    "vscode-textmate": "^4.1.0"
   }
 }
