--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "dependencies": {
     "comment-json": "^1.1.3",
+    "decompress": "^4.2.0",
     "oniguruma": "^7.0.2",
     "plist": "^3.0.1",
     "vscode-textmate": "^4.1.0"
