--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Gatsby plugin to provide VS Code language support and themes to code snippets",
   "main": "index.js",
   "scripts": {
-    "test": "jest"
+    "test": "jest --coverage"
   },
   "repository": {
     "type": "git",
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/andrewbranch/gatsby-remark-textmate-highlight#readme",
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "jest": "^24.5.0",
     "typescript": "^3.3.4000"
   },
@@ -34,5 +35,8 @@
     "oniguruma": "^7.0.2",
     "plist": "^3.0.1",
     "vscode-textmate": "^4.1.0"
+  },
+  "jest": {
+    "coveragePathIgnorePatterns": ["lib/"]
   }
 }
