--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Gatsby plugin to provide VS Code language support and themes to code snippets",
   "main": "index.js",
   "scripts": {
-    "test": "jest --coverage"
+    "build": "node scripts/scrapeBuiltinExtensions.js",
+    "test": "jest --coverage",
+    "pretest": "npm run build",
+    "prepare": "npm test"
   },
   "repository": {
     "type": "git",
@@ -25,8 +28,11 @@
   },
   "homepage": "https://github.com/andrewbranch/gatsby-remark-textmate-highlight#readme",
   "devDependencies": {
+    "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.11",
+    "glob": "^7.1.3",
     "jest": "^24.5.0",
+    "js-yaml": "^3.13.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
@@ -37,6 +43,11 @@
     "vscode-textmate": "^4.1.0"
   },
   "jest": {
-    "coveragePathIgnorePatterns": ["lib/"]
+    "coveragePathIgnorePatterns": [
+      "lib"
+    ],
+    "testPathIgnorePatterns": [
+      "<rootDir>/vscode"
+    ]
   }
 }
