--- a/package.json
+++ b/package.json
@@ -33,13 +33,14 @@
     "glob": "^7.1.3",
     "jest": "^24.5.0",
     "js-yaml": "^3.13.0",
+    "plist": "^3.0.1",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
     "comment-json": "^1.1.3",
     "decompress": "^4.2.0",
+    "lodash.uniq": "^4.5.0",
     "oniguruma": "^7.0.2",
-    "plist": "^3.0.1",
     "vscode-textmate": "^4.1.0"
   },
   "jest": {
