--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   "dependencies": {
     "comment-json": "^1.1.3",
     "decompress": "^4.2.0",
+    "lodash.escape": "^4.0.1",
     "lodash.uniq": "^4.5.0",
     "oniguruma": "^7.0.2",
     "vscode-textmate": "^4.1.0"
