--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.11",
+    "@types/node": "^11.13.7",
     "glob": "^7.1.3",
     "jest": "^24.5.0",
     "js-yaml": "^3.13.0",
