--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build": "node scripts/scrapeBuiltinExtensions.js",
     "test": "jest",
-    "pretest": "npm run build",
+    "pretest": "npm run build && prettier --check",
     "prepare": "npm test"
   },
   "repository": {
@@ -31,8 +31,11 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.11",
     "@types/node": "^11.13.7",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.2.0",
     "glob": "^7.1.3",
     "jest": "^24.5.0",
+    "prettier": "^1.17.0",
     "typescript": "^3.3.4000"
   },
   "dependencies": {
