--- a/package.json
+++ b/package.json
@@ -30,10 +30,10 @@
   },
   "homepage": "https://github.com/andrewbranch/gatsby-remark-vscode#readme",
   "devDependencies": {
-    "@types/comment-json": "^1.1.1",
     "@types/decompress": "^4.2.3",
     "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.11",
+    "@types/json5": "0.0.30",
     "@types/lodash.escape": "^4.0.6",
     "@types/lodash.uniq": "^4.5.6",
     "@types/node": "^12.0.0",
@@ -45,8 +45,8 @@
     "typescript": "^3.4.5"
   },
   "dependencies": {
-    "comment-json": "^1.1.3",
     "decompress": "^4.2.0",
+    "json5": "^2.1.0",
     "lodash.escape": "^4.0.1",
     "lodash.uniq": "^4.5.0",
     "oniguruma": "^7.2.0",
