--- a/package.json
+++ b/package.json
@@ -40,9 +40,16 @@
     "@types/plist": "^3.0.2",
     "@types/request": "^2.48.1",
     "glob": "^7.1.3",
+    "hast-util-raw": "^5.0.1",
     "jest": "^24.5.0",
+    "mdast-util-to-hast": "^6.0.1",
     "prettier": "^1.17.0",
-    "typescript": "^3.4.5"
+    "rehype-raw": "^4.0.1",
+    "rehype-stringify": "^6.0.0",
+    "remark-parse": "^7.0.1",
+    "remark-rehype": "^5.0.0",
+    "typescript": "^3.4.5",
+    "unified": "^8.3.2"
   },
   "dependencies": {
     "decompress": "^4.2.0",
@@ -52,6 +59,7 @@
     "loglevel": "^1.6.3",
     "oniguruma": "^7.2.0",
     "plist": "^3.0.1",
+    "rehype-format": "^2.3.2",
     "unist-util-visit": "^1.4.0",
     "vscode-textmate": "^4.1.0"
   },
