--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^16.11.0",
     "react-helmet": "^5.2.1",
     "react-typography": "^0.16.19",
+    "rehype-react": "^4.0.1",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
