--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -16,7 +16,8 @@
       "name": "Test",
       "program": "${workspaceFolder}/node_modules/jest/bin/jest.js",
       "args": ["--runInBand"],
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",
+      "disableOptimisticBPs": true
     },
     {
       "type": "node",
@@ -25,7 +26,8 @@
       "cwd": "${workspaceFolder}/examples/example-site",
       "program": "${workspaceFolder}/examples/example-site/node_modules/.bin/gatsby",
       "args": ["develop"],
-      "console": "integratedTerminal"
+      "console": "integratedTerminal",
+      "disableOptimisticBPs": true
     }
   ]
 }
