--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test": "jest",
     "pretest": "npm run check && npm run build && prettier --check src/**/*.js",
     "prepublishOnly": "npm test",
-    "format": "prettier --write src/**/*.js"
+    "format": "prettier --write 'src/**/*.js'"
   },
   "repository": {
     "type": "git",
