--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,7 +53,7 @@ jobs:
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
   publish_alpha:
-    if: github.event_name == 'push' && github.ref == 'v2'
+    if: github.event_name == 'push' && endsWith(github.ref, 'v2')
     needs: build_test
     name: publish alpha version to npm
     runs-on: ubuntu-latest
