--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
     "@types/lodash.uniq": "^4.5.6",
     "@types/node": "^12.12.5",
     "@types/plist": "^3.0.2",
-    "@types/request": "^2.48.3",
     "glob": "^7.1.5",
     "hast-util-raw": "^5.0.1",
     "jest": "^24.9.0",
@@ -53,6 +52,7 @@
     "unified": "^8.4.1"
   },
   "dependencies": {
+    "@andrewbranch/definitely-not-slow": "github:andrewbranch/definitely-not-slow",
     "decompress": "^4.2.0",
     "json5": "^2.1.1",
     "lodash.escape": "^4.0.1",
