--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -34,7 +34,8 @@
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75",
     "typography": "^0.16.19",
-    "typography-theme-wordpress-2016": "^0.16.19"
+    "typography-theme-wordpress-2016": "^0.16.19",
+    "vscode-styled-components": "github:styled-components/vscode-styled-components"
   },
   "devDependencies": {
     "prettier": "^1.18.2"
