--- a/package.json
+++ b/package.json
@@ -37,8 +37,6 @@
     "@types/glob": "^7.1.1",
     "@types/jest": "^24.0.21",
     "@types/json5": "0.0.30",
-    "@types/lodash.escape": "^4.0.6",
-    "@types/lodash.uniq": "^4.5.6",
     "@types/node": "^12.12.5",
     "@types/plist": "^3.0.2",
     "glob": "^7.1.5",
@@ -51,7 +49,6 @@
     "rehype-stringify": "^6.0.0",
     "remark-parse": "^7.0.1",
     "remark-rehype": "^5.0.0",
-    "rimraf": "^3.0.0",
     "synthwave-vscode": "github:robb0wen/synthwave-vscode",
     "typescript": "^3.6.4",
     "unified": "^8.4.1"
@@ -59,8 +56,6 @@
   "dependencies": {
     "decompress": "^4.2.0",
     "json5": "^2.1.1",
-    "lodash.escape": "^4.0.1",
-    "lodash.uniq": "^4.5.0",
     "loglevel": "^1.6.4",
     "oniguruma": "^7.2.0",
     "plist": "^3.0.1",
@@ -68,7 +63,9 @@
     "vscode-textmate": "4.2.2"
   },
   "jest": {
-    "testMatch": ["<rootDir>/test/index.js"],
+    "testMatch": [
+      "<rootDir>/test/index.js"
+    ],
     "globalSetup": "<rootDir>/test/setup.js",
     "coveragePathIgnorePatterns": [
       "lib"
