--- a/package.json
+++ b/package.json
@@ -39,10 +39,13 @@
     "@types/json5": "0.0.30",
     "@types/node": "^12.12.5",
     "@types/plist": "^3.0.2",
+    "gatsby": "^2.22.9",
+    "gatsby-source-filesystem": "^2.3.8",
+    "gatsby-transformer-remark": "^2.8.13",
     "glob": "^7.1.5",
-    "graphql": "^14.5.8",
+    "graphql": "^14.6.0",
     "hast-util-raw": "^5.0.1",
-    "jest": "^25.1.0",
+    "jest": "^26.0.1",
     "mdast-util-to-hast": "^6.0.2",
     "open": "^7.0.0",
     "prettier": "^1.18.2",
@@ -59,6 +62,7 @@
     "loglevel": "^1.6.4",
     "oniguruma": "^7.2.0",
     "plist": "^3.0.1",
+    "react-dom": "^16.13.1",
     "unist-util-visit": "^1.4.1",
     "vscode-textmate": "4.2.2"
   },
