Update workflows and CONTRIBUTING.md

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,9 +30,9 @@ jobs:
       with:
         node-version: ${{ matrix.node }}
     - name: install
-      run: npm ci
+      run: yarn install --frozen-lockfile
     - name: test
-      run: npm test
+      run: yarn test
   publish:
     if: github.event_name == 'release'
     needs: build_test
@@ -45,9 +45,9 @@ jobs:
         node-version: '12'
         registry-url: 'https://registry.npmjs.org'
     - name: install
-      run: npm ci
+      run: yarn install --frozen-lockfile
     - name: build
-      run: npm run build
+      run: yarn build
     - name: publish production
       run: npm publish
       env:
@@ -64,9 +64,9 @@ jobs:
         node-version: '12'
         registry-url: 'https://registry.npmjs.org'
     - name: install
-      run: npm ci
+      run: yarn install --frozen-lockfile
     - name: build
-      run: npm run build
+      run: yarn build
     - name: publish alpha
       run: |
         version=`node .github/workflows/getVersion.js 3.0.0`
