--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/node": "^12.12.5",
     "@types/plist": "^3.0.2",
     "gatsby": "^2.22.9",
+    "gatsby-cli": "^2.12.58",
     "gatsby-source-filesystem": "^2.3.8",
     "gatsby-transformer-remark": "^2.8.13",
     "glob": "^7.1.5",
@@ -49,9 +50,11 @@
     "mdast-util-to-hast": "^6.0.2",
     "open": "^7.0.0",
     "prettier": "^1.18.2",
+    "react-dom": "^16.13.1",
     "rehype-stringify": "^6.0.0",
     "remark-parse": "^7.0.1",
     "remark-rehype": "^5.0.0",
+    "rimraf": "^3.0.2",
     "synthwave-vscode": "github:robb0wen/synthwave-vscode",
     "typescript": "^3.6.4",
     "unified": "^8.4.1"
@@ -62,7 +65,6 @@
     "loglevel": "^1.6.4",
     "oniguruma": "^7.2.0",
     "plist": "^3.0.1",
-    "react-dom": "^16.13.1",
     "unist-util-visit": "^1.4.1",
     "vscode-textmate": "4.2.2"
   },
