--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "oniguruma": "^7.2.0",
     "plist": "^3.0.1",
     "unist-util-visit": "^1.4.1",
-    "vscode-textmate": "4.2.2"
+    "vscode-oniguruma": "^1.4.0",
+    "vscode-textmate": "^5.2.0"
   },
   "jest": {
     "testMatch": [
