--- a/package.json
+++ b/package.json
@@ -63,10 +63,10 @@
     "decompress": "^4.2.0",
     "json5": "^2.1.1",
     "loglevel": "^1.6.4",
-    "oniguruma": "^7.2.0",
     "plist": "^3.0.1",
     "unist-util-visit": "^1.4.1",
-    "vscode-textmate": "4.2.2"
+    "vscode-oniguruma": "^1.4.0",
+    "vscode-textmate": "^5.2.0"
   },
   "jest": {
     "testMatch": [
