--- a/package.json
+++ b/package.json
@@ -50,17 +50,19 @@
     "mdast-util-to-hast": "^6.0.2",
     "open": "^7.0.0",
     "prettier": "^1.18.2",
+    "react": "^17.0.1",
     "react-dom": "^16.13.1",
     "rehype-stringify": "^6.0.0",
     "remark-parse": "^7.0.1",
     "remark-rehype": "^5.0.0",
     "rimraf": "^3.0.2",
-    "synthwave-vscode": "github:robb0wen/synthwave-vscode",
-    "typescript": "^3.6.4",
+    "synthwave-vscode": "git://github.com/robb0wen/synthwave-vscode",
+    "typescript": "^4.2.3",
     "unified": "^8.4.1"
   },
   "dependencies": {
     "decompress": "^4.2.0",
+    "global": "^4.4.0",
     "json5": "^2.1.1",
     "loglevel": "^1.6.4",
     "plist": "^3.0.1",
