--- a/package.json
+++ b/package.json
@@ -39,19 +39,19 @@
     "@types/json5": "0.0.30",
     "@types/node": "^12.12.5",
     "@types/plist": "^3.0.2",
-    "gatsby": "^2.22.9",
-    "gatsby-cli": "^2.12.58",
-    "gatsby-source-filesystem": "^2.3.8",
-    "gatsby-transformer-remark": "^2.8.13",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.22.0",
+    "gatsby-cli": "^3.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
     "glob": "^7.1.5",
-    "graphql": "^14.6.0",
+    "graphql": "^14.4.1",
     "hast-util-raw": "^5.0.1",
-    "jest": "^26.0.1",
+    "jest": "^26.6.3",
     "mdast-util-to-hast": "^6.0.2",
     "open": "^7.0.0",
     "prettier": "^1.18.2",
-    "react": "^17.0.1",
-    "react-dom": "^16.13.1",
+    "react-dom": "^17.0.1",
     "rehype-stringify": "^6.0.0",
     "remark-parse": "^7.0.1",
     "remark-rehype": "^5.0.0",
@@ -70,7 +70,7 @@
     "vscode-textmate": "^5.2.0"
   },
   "peerDependencies": {
-    "gatsby": "^2.12.1"
+    "gatsby": "^3.1.1"
   },
   "jest": {
     "testMatch": [
