Fix dependencies and update snapshots

--- a/package.json
+++ b/package.json
@@ -41,16 +41,17 @@
     "@types/plist": "^3.0.2",
     "babel-eslint": "^10.1.0",
     "eslint": "^7.22.0",
+    "gatsby": "^3.1.1",
     "gatsby-cli": "^3.1.0",
     "gatsby-source-filesystem": "^3.1.0",
     "gatsby-transformer-remark": "^3.1.0",
     "glob": "^7.1.5",
-    "graphql": "^14.4.1",
     "hast-util-raw": "^5.0.1",
     "jest": "^26.6.3",
     "mdast-util-to-hast": "^6.0.2",
     "open": "^7.0.0",
     "prettier": "^1.18.2",
+    "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "rehype-stringify": "^6.0.0",
     "remark-parse": "^7.0.1",
