--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -8,36 +8,40 @@
     "url": "https://github.com/gatsbyjs/gatsby/issues"
   },
   "dependencies": {
-    "gatsby": "^2.17.4",
-    "gatsby-image": "^2.2.29",
-    "gatsby-plugin-feed": "^2.3.19",
-    "gatsby-plugin-google-analytics": "^2.1.23",
-    "gatsby-plugin-manifest": "^2.2.23",
-    "gatsby-plugin-offline": "^3.0.16",
-    "gatsby-plugin-react-helmet": "^3.1.13",
-    "gatsby-plugin-sharp": "^2.2.32",
-    "gatsby-plugin-typography": "^2.3.14",
-    "gatsby-remark-copy-linked-files": "^2.1.28",
-    "gatsby-remark-images": "^3.1.28",
-    "gatsby-remark-prismjs": "^3.3.20",
-    "gatsby-remark-responsive-iframe": "^2.2.25",
-    "gatsby-remark-smartypants": "^2.1.14",
-    "gatsby-source-filesystem": "^2.1.33",
-    "gatsby-transformer-remark": "^2.6.30",
-    "gatsby-transformer-sharp": "^2.3.0",
-    "prismjs": "^1.17.1",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-helmet": "^5.2.1",
+    "babel-eslint": "^10.1.0",
+    "gatsby": "^3.1.1",
+    "gatsby-image": "^3.1.0",
+    "gatsby-plugin-feed": "^3.1.0",
+    "gatsby-plugin-google-analytics": "^3.1.0",
+    "gatsby-plugin-manifest": "^3.1.0",
+    "gatsby-plugin-offline": "^4.1.0",
+    "gatsby-plugin-react-helmet": "^4.1.0",
+    "gatsby-plugin-sharp": "^3.1.1",
+    "gatsby-plugin-typography": "^3.1.0",
+    "gatsby-remark-copy-linked-files": "^3.1.0",
+    "gatsby-remark-images": "^4.1.0",
+    "gatsby-remark-prismjs": "^4.1.0",
+    "gatsby-remark-responsive-iframe": "^3.1.0",
+    "gatsby-remark-smartypants": "^3.1.0",
+    "gatsby-source-filesystem": "^3.1.0",
+    "gatsby-transformer-remark": "^3.1.0",
+    "gatsby-transformer-sharp": "^3.1.0",
+    "graphql": "^15.5.0",
+    "prismjs": "^1.23.0",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-typography": "^0.16.19",
-    "rehype-react": "^4.0.1",
-    "typeface-merriweather": "0.0.72",
-    "typeface-montserrat": "0.0.75",
+    "rehype-react": "^6.2.0",
+    "typeface-merriweather": "^1.1.13",
+    "typeface-montserrat": "^1.1.13",
+    "typescript": "^4.2.3",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19",
     "vscode-styled-components": "github:styled-components/vscode-styled-components"
   },
   "devDependencies": {
+    "eslint": "^7.22.0",
     "prettier": "^1.18.2"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
