--- a/examples/example-site/package.json
+++ b/examples/example-site/package.json
@@ -38,7 +38,7 @@
     "typescript": "^4.2.3",
     "typography": "^0.16.19",
     "typography-theme-wordpress-2016": "^0.16.19",
-    "vscode-styled-components": "github:styled-components/vscode-styled-components"
+    "vscode-styled-components": "git://github.com/styled-components/vscode-styled-components"
   },
   "devDependencies": {
     "eslint": "^7.22.0",
