--- a/package.json
+++ b/package.json
@@ -71,7 +71,7 @@
     "vscode-textmate": "^5.2.0"
   },
   "peerDependencies": {
-    "gatsby": "^3.1.1"
+    "gatsby": "^2.12.1 || ^3.1.1"
   },
   "jest": {
     "testMatch": [
