--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
     "checkJs": true,
     "noEmit": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "skipLibCheck": true
   },
   "include": [
     "gatsby-node.js",
